# mini-notes

./: CLAUDE.md  Cargo.toml  Makefile  design_notes.md  notes_on_tools.md  todo.md
.claude/: settings.local.json
aws/: README.md  create-cloudfront-distribution.sh  create-cors-policy.sh  create-dynamodb-table-notes.sh  create-dynamodb-table-sessions.sh  create-dynamodb-table-users.sh  create-dynamodb-table.sh  create-dynamodb-tables.sh  create-iam-role.sh  create-lambda-api-v1.sh  create-lambda-get-note.sh  create-scheduled-job.sh  create-scheduler-role.sh  env.sh  init-scheduled-jobs.sh  recreate-notes-table.sh  seed-test-data.sh  upload-static-assets.sh
docs/: app-states.excalidraw  design_notes.md  mini-notes-state-2026-04-11-1617.excalidraw  notes_on_tools.md  state-model.md  state-model.mmd  todo.md
html/: admin.css  admin.html  admin.js  index.html  index.js  landing.html  main.css  main.html  main.js  manifest.json  sw.js  tasks.md
lambdas/api-v1/: Cargo.toml
lambdas/api-v1/src/: diff.rs  extractors.rs  main.rs  models.rs  passwords.rs  test_helpers.rs  utils.rs
lambdas/api-v1/src/handlers/: common.rs  handle_delete_note.rs  handle_delete_user.rs  handle_destroy_deleted_note.rs  handle_edit_note.rs  handle_edit_user.rs  handle_export_notes.rs  handle_get_deleted_notes.rs  handle_get_note.rs  handle_get_notes.rs  handle_get_user.rs  handle_import_notes.rs  handle_new_note.rs  handle_recover_note.rs  handle_search_notes.rs  handle_site_data.rs  handle_user_create.rs  handle_user_login.rs  handle_user_logout.rs  mod.rs
lambdas/common/: Cargo.toml
lambdas/common/src/: lib.rs
lambdas/get-note/: Cargo.toml
lambdas/get-note/src/: main.rs
lambdas/job-heartbeat/: Cargo.toml
lambdas/job-heartbeat/src/: main.rs
