[package]
name = "api-v1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api-v1"
path = "src/main.rs"

[dependencies]
lambda_http = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
time = {  version = "0.3", features = ["formatting"] }
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5" # password hashing
rand_core = { version = "0.6", features = ["getrandom"] } # needed for argon2's OsRng
zip = { version = "2", default-features = false, features = ["deflate"] }


[dev-dependencies]
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
aws-credential-types = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
