[package]
name = "job-heartbeat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "job-heartbeat"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
lambda_runtime = "1.1"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
